--- a/Implementacion/proySC/module/Fact/view/fact/venta/list-ui.phtml
+++ b/Implementacion/proySC/module/Fact/view/fact/venta/list-ui.phtml
@@ -213,7 +213,7 @@ viewContainer.bodyPanel = [{
 																return 'Remisi&oacute;n';
 															else return v;
 														}},
-														{ header: "Total", dataIndex: 'total_ingreso',  width: 65},
+														{ header: "Total", dataIndex: 'total_egreso',  width: 65},
 														{ header: "Moneda", dataIndex: 'moneda_simbolo',  width: 65},
 														{ header: "Ver", dataIndex: null,  width: 32, align: 'center', renderer: function(v,meta,record){
 															return '<div class="viewIcon" onclick="verMoneda(' + record.data.cont_moneda_id + ')"></div>';
