--- a/Implementacion/proySC/module/Org/view/org/personas/index-ui.phtml
+++ b/Implementacion/proySC/module/Org/view/org/personas/index-ui.phtml
@@ -76,8 +76,8 @@ function formularioPersona(isNew, data)
 			       allowBlank: false,
 			       columns: 2,
 			       items: [
-			               {boxLabel: 'Hombre', name: 'genero_persona', inputValue: 'H', checked: (isNew)?(false):( (data.genero_persona == 'H')?(true):(false) )},
-			               {boxLabel: 'Mujer', name: 'genero_persona', inputValue: 'M', checked: (isNew)?(false):( (data.genero_persona == 'M')?(true):(false) )}
+			               {boxLabel: 'Masculino', name: 'genero_persona', inputValue: 'M', checked: (isNew)?(false):( (data.genero_persona == 'M')?(true):(false) )},
+			               {boxLabel: 'Femenino', name: 'genero_persona', inputValue: 'F', checked: (isNew)?(false):( (data.genero_persona == 'F')?(true):(false) )}
 			       ]
 		       },
 		       {
@@ -243,7 +243,7 @@ function formularioVerPersona(data)
 		       {
 		    	   fieldLabel: 'Genero',
 			       name: 'genero',
-			       value: ((data.genero_persona == 'H')?('Hombre'):('Mujer'))
+			       value: ((data.genero_persona == 'M')?('Masculino'):('Femenino'))
 		       },
 		       {
 			       xtype: 'container',
