--- a/Implementacion/proySC/public/css/layout/style.css
+++ b/Implementacion/proySC/public/css/layout/style.css
@@ -3,6 +3,15 @@
   border: 1px dotted black;
 }
 
+
+body{
+	overflow-x: hidden !important;
+}
+
+#mainViewContainer{
+	margin-left: -5px !important;
+}
+
 /*
 body{
 	font-size: 11px;
